<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res/ru.ivanp.vibro">

    <!-- MAGNITUDE -->
    <PreferenceCategory android:title="@string/vibration_magnitude">
        <CheckBoxPreference
            android:key="recorder_fixed_magnitude"
            android:summary="@string/fixed_magnitude_summary"
            android:title="@string/fixed_magnitude" />

        <ru.ivanp.vibro.views.SeekBarPreference
            android:defaultValue="100"
            android:dependency="recorder_fixed_magnitude"
            android:key="recorder_magnitude"
            android:persistent="true"
            android:title="@string/magnitude"
            widget:currentValueText="@string/current_magnitude"
            widget:maxValue="100"
            widget:minValue="1" />
    </PreferenceCategory>

    <!-- LENGTH -->
    <PreferenceCategory android:title="@string/duration_of_vibration">
        <CheckBoxPreference
            android:key="recorder_limit_duration_of_vibration"
            android:title="@string/limit_duration_of_vibration" />

        <ru.ivanp.vibro.views.SeekBarPreference
            android:defaultValue="5"
            android:dependency="recorder_limit_duration_of_vibration"
            android:key="recorder_duration"
            android:persistent="true"
            android:title="@string/duration"
            widget:currentValueText="@string/current_duration"
            widget:maxValue="60"
            widget:minValue="1" />
    </PreferenceCategory>

</PreferenceScreen>